src/test/ui/issues/issue-31845.stderr
error[E0425]: cannot find function `g` in this scope
  --> $DIR/issue-31845.rs:7:12
   |
LL |            g();
   |            ^ help: a function with a similar name exists: `h`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0425`.
